# cloudsineAI_assessment_backend

./: Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: deployment.yml
nginx/: fastapi.conf
routes/genai/: genai_controller.py  genai_service.py  system_prompt_variations.py
routes/scan/: scan_controller.py  scan_service.py
routes/scan/DTO/: ScannedAnalysisDTO.py  ScannedFileDTO.py
