[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.4"
dependencies = [
    "fastapi>=0.115.12",
    "google-genai>=1.19.0",
    "puremagic>=1.29",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]
